<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <FrameLayout
        android:id="@+id/preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <com.pov.hd.selfiecamera.TopLayer
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/take_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerVertical="true"
        android:background="@null"
        android:contentDescription="@string/take_photo"
        android:onClick="clickedTakePhoto"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/take_photo_selector" />

    <ImageButton
        android:id="@+id/addItem"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@null"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/addimg" />

    <ImageButton
        android:id="@+id/remoeItem"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@null"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/trash" />

    <ZoomControls
        android:id="@+id/zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5" />

    <SeekBar
        android:id="@+id/zoom_seekbar"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <Button
        android:id="@+id/gui_anchor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="1dp"
        android:scaleType="fitCenter" />

    <ImageButton
        android:id="@+id/settings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/action_settings"
        android:onClick="clickedSettings"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/settings" />

    <ImageButton
        android:id="@+id/gallery"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/gallery"
        android:onClick="clickedGallery"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/gallery" />

    <ImageButton
        android:id="@+id/popup"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/action_popup"
        android:onClick="clickedPopupSettings"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/popup" />

    <ImageButton
        android:id="@+id/exposure_lock"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/exposure_lock"
        android:onClick="clickedExposureLock"
        android:padding="10dp"
        android:scaleType="fitCenter" />

    <ImageButton
        android:id="@+id/exposure"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/exposure"
        android:onClick="clickedExposure"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/exposure" />

    <ImageButton
        android:id="@+id/switch_video"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/switch_video"
        android:onClick="clickedSwitchVideo"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/switch_video" />

    <ImageButton
        android:id="@+id/switch_camera"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/switch_camera"
        android:onClick="clickedSwitchCamera"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/switch_camera" />

    <!-- should be at left-most -->

    <ImageButton
        android:id="@+id/trash"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/trash"
        android:onClick="clickedTrash"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/trash"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/share"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/share"
        android:onClick="clickedShare"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/share"
        android:visibility="gone" />

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <ZoomControls
        android:id="@+id/seekbar_zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <FrameLayout
        android:id="@+id/prefs_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" />

    <FrameLayout
        android:id="@+id/locker"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ScrollView
        android:id="@+id/popup_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings"
        android:layout_toLeftOf="@+id/settings" />

    <ScrollView
        android:id="@+id/hide_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>